cmake_minimum_required(VERSION 3.8)
project(DataStructure)

set(CMAKE_CXX_STANDARD 11)

add_executable(8-1.1 week_eight/8-1.1.cpp Sort/Sort.h Sort/Sort.cpp)
add_executable(KS-temp KS/KS-temp.cpp)
add_executable(KS-7-9-DirTree KS/KS-7-9-DirTree.cpp)
add_executable(KS-7-13MinCost KS/KS-7-13MinCost.cpp)
add_executable(KS-7-19-SearchMillionare KS/KS-7-19-SearchMillionare.cpp)
add_executable(KS-7-22-EXCELSort KS/KS-7-22-EXCELSort.cpp)